--- a/Martify/MainWindow.xaml
+++ b/Martify/MainWindow.xaml
@@ -31,89 +31,79 @@
 
     <Grid>
         <Border Background="{DynamicResource MainBackground}" 
-                CornerRadius="30" >
+                CornerRadius="30" />
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="4*"/>
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="250"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
 
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="200"/>
-                    <ColumnDefinition Width="4*"/>
-                </Grid.ColumnDefinitions>
-                <Grid Grid.Column="0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="250"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-
-                    <Border Grid.RowSpan="2" CornerRadius="30,30,30,30">
-                        <Border.Background>
-                            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                <GradientStop Color="#067FF8" Offset="0"/>
-                                <GradientStop Color="#067FF8" Offset="0.35"/>
-                                <GradientStop Color="#FF3654F1" Offset="1"/>
-                            </LinearGradientBrush>
-                        </Border.Background>
-                        <Border.Effect>
-                            <DropShadowEffect Color="Black" 
+                <Border Grid.RowSpan="2" CornerRadius="30,30,30,30">
+                    <Border.Background>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="#067FF8" Offset="0"/>
+                            <GradientStop Color="#067FF8" Offset="0.35"/>
+                            <GradientStop Color="#FF3654F1" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Border.Background>
+                    <Border.Effect>
+                        <DropShadowEffect Color="Black" 
                                               BlurRadius="20" 
                                               ShadowDepth="5" 
                                               Direction="0" 
                                               Opacity="0.3"/>
-                        </Border.Effect>
-                    </Border>
+                    </Border.Effect>
+                </Border>
 
 
-                    <Grid Grid.Row="0" Margin="0" 
+                <Grid Grid.Row="0" Margin="0" 
                           Width="200" Height="200"
                           HorizontalAlignment="Center">
 
-                        <StackPanel Orientation="Vertical">
-                            <Grid Width="120" Height="120">
-                                <Ellipse Width="120" Height="120" HorizontalAlignment="Center" VerticalAlignment="Top">
-                                    <Ellipse.Fill>
-                                        <ImageBrush Stretch="UniformToFill">
-                                            <ImageBrush.ImageSource>
-                                                <Binding Path="ImagePath" 
-                                                         Converter="{StaticResource ImgConverter}"
-                                                         TargetNullValue="{StaticResource Anonymous}"
-                                                         FallbackValue="{StaticResource Anonymous}"/>
-                                            </ImageBrush.ImageSource>
-                                        </ImageBrush>
-                                    </Ellipse.Fill>
-                                </Ellipse>
-                            </Grid>
+                    <StackPanel Orientation="Vertical">
+                        <Grid Width="120" Height="120">
+                            <Ellipse Width="120" Height="120" HorizontalAlignment="Center" VerticalAlignment="Top">
+                                <Ellipse.Fill>
+                                    <ImageBrush Stretch="UniformToFill" ImageSource="{Binding ImagePath, Converter={StaticResource ImgConverter}, FallbackValue={StaticResource Anonymous}, TargetNullValue={StaticResource Anonymous}}"/>
+                                </Ellipse.Fill>
+                            </Ellipse>
+                        </Grid>
 
-                            <StackPanel HorizontalAlignment="Center">
-                                <TextBlock Text="{Binding FullName}"
+                        <StackPanel HorizontalAlignment="Center">
+                            <TextBlock Text="{Binding FullName}"
                                            FontSize="20"
                                            Foreground="White" 
                                            VerticalAlignment="Bottom"
                                            HorizontalAlignment="Center"
                                            Margin="0,7.5,0,0" FontFamily="Roboto"/>
 
-                                <TextBlock Text="{Binding Email}"
+                            <TextBlock Text="{Binding Email}"
                                            Margin="0,0,0,0"
                                            FontSize="12"
                                            Foreground="White"
                                            VerticalAlignment="Bottom"
                                            HorizontalAlignment="Center" FontFamily="Roboto Medium"/>
-                            </StackPanel>
                         </StackPanel>
-                    </Grid>
-
-                    <Grid Grid.Row="1">
-                        <uc:SidePanel Margin="0,-25,0,0" HorizontalAlignment="Left"/>
-                    </Grid>
+                    </StackPanel>
                 </Grid>
 
-
-                <Grid Grid.Column="1">
-                    <ContentControl x:Name="Pages" IsTabStop="False"
-                                    Content="{Binding Navigation.CurrentView}"></ContentControl>
+                <Grid Grid.Row="1">
+                    <uc:SidePanel Margin="0,-25,0,0" HorizontalAlignment="Left"/>
                 </Grid>
-
             </Grid>
 
-         </Border>
+
+            <Grid Grid.Column="1">
+                <ContentControl x:Name="Pages" IsTabStop="False"
+                                    Content="{Binding Navigation.CurrentView}"/>
+            </Grid>
+
+        </Grid>
 
         <uc:WindowControl/>
     </Grid>
