--- a/Martify/Views/ImportChoiceDialog.xaml
+++ b/Martify/Views/ImportChoiceDialog.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Import Choice" 
-        Height="450" 
-        Width="500"
+        Title="Chon Cach Nhap" 
+        Height="473" 
+        Width="525"
         WindowStyle="None"
         Background="Transparent"
         AllowsTransparency="True"
