--- a/Martify/Views/InventoryAlertWindow.xaml
+++ b/Martify/Views/InventoryAlertWindow.xaml
@@ -1,18 +1,18 @@
 ﻿<Window x:Class="Martify.Views.InventoryAlertWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        mc:Ignorable="d"
-        Title="Inventory Alert Details" 
-        Height="650" 
-        Width="850"
-        WindowStartupLocation="CenterOwner"
-        ResizeMode="NoResize"
-        WindowStyle="None"
-        AllowsTransparency="True"
-        Background="Transparent">
+xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+mc:Ignorable="d"
+Title="Inventory Alert Details" 
+Height="650" 
+Width="850"
+WindowStartupLocation="CenterOwner"
+ResizeMode="NoResize"
+WindowStyle="None"
+AllowsTransparency="True"
+Background="Transparent">
 
     <Window.Resources>
         <!-- Style for DataGrid -->
@@ -218,6 +218,7 @@
                             Foreground="#FF6B35"
                             BorderBrush="#FF6B35"
                             BorderThickness="1.5"
+                            Command="{Binding RestockCommand}"
                             ToolTip="Nhập hàng vào kho">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="TrayArrowDown" 
@@ -225,34 +226,12 @@
                                                      Height="16" 
                                                      VerticalAlignment="Center"
                                                      Margin="0,0,6,0"/>
-                            <TextBlock Text="Nhập hàng" 
-                                       VerticalAlignment="Center"
+                            <TextBlock VerticalAlignment="Center"
                                        FontSize="12"
-                                       FontWeight="SemiBold"/>
-                        </StackPanel>
-                    </Button>
-
-                    <!-- Add Product Button -->
-                    <Button Height="32"
-                            Padding="12,0"
-                            Style="{StaticResource MaterialDesignRaisedButton}"
-                            Background="#633FCE" 
-                            Foreground="White"
-                            BorderThickness="0"
-                            ToolTip="Thêm sản phẩm mới">
-                        <Button.Effect>
-                            <DropShadowEffect Color="#633FCE" BlurRadius="8" ShadowDepth="2" Opacity="0.3"/>
-                        </Button.Effect>
-                        <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="Plus" 
-                                                     Width="16" 
-                                                     Height="16" 
-                                                     VerticalAlignment="Center"
-                                                     Margin="0,0,6,0"/>
-                            <TextBlock Text="Thêm sản phẩm" 
-                                       VerticalAlignment="Center"
-                                       FontSize="12"
-                                       FontWeight="SemiBold"/>
+                                       FontWeight="SemiBold">
+                                <Run Text="Nhập hàng"/>
+                                <Run Text="("/><Run Text="{Binding SelectedCount, Mode=OneWay}"/><Run Text=")"/>
+                            </TextBlock>
                         </StackPanel>
                     </Button>
                 </StackPanel>
@@ -275,7 +254,8 @@
                           CanUserDeleteRows="False"
                           CanUserReorderColumns="False"
                           CanUserResizeColumns="False"
-                          IsReadOnly="True"
+                          CanUserSortColumns="True"
+                          IsReadOnly="False"
                           SelectionMode="Single"
                           SelectionUnit="FullRow"
                           ItemsSource="{Binding Products}"
@@ -302,7 +282,7 @@
                                 <Trigger Property="IsSelected" Value="True">    
                                     <Setter Property="Background" Value="#E3F2FD"/>
                                 </Trigger>
-                                <DataTrigger Binding="{Binding StockQuantity}" Value="0">
+                                <DataTrigger Binding="{Binding Product.StockQuantity}" Value="0">
                                     <Setter Property="Opacity" Value="0.5"/>
                                     <Setter Property="ToolTip" Value="Sản phẩm đã hết hàng"/>
                                 </DataTrigger>
@@ -317,22 +297,47 @@
                             <Setter Property="FontSize" Value="11"/>
                             <Setter Property="FontWeight" Value="SemiBold"/>
                             <Setter Property="Background" Value="Transparent"/>
-                            <Setter Property="Padding" Value="12,4"/>
+                            <Setter Property="Padding" Value="12,8"/>
                             <Setter Property="HorizontalContentAlignment" Value="Left"/>
+                            <Setter Property="VerticalContentAlignment" Value="Center"/>
                         </Style>
 
                         <Style TargetType="{x:Type DataGridCell}" 
                                BasedOn="{StaticResource MaterialDesignDataGridCell}">
                             <Setter Property="Foreground" Value="{DynamicResource PrimaryText}"/>
                             <Setter Property="BorderThickness" Value="0"/>
-                            <Setter Property="Padding" Value="8,4"/>
+                            <Setter Property="Padding" Value="8,8"/>
                             <Setter Property="Background" Value="Transparent"/>
+                            <Setter Property="VerticalContentAlignment" Value="Center"/>
                         </Style>
                     </DataGrid.Resources>
 
                     <DataGrid.Columns>
+                        <!-- Checkbox Column -->
+                        <DataGridTemplateColumn Width="50" MinWidth="50" CanUserSort="False">
+                            <DataGridTemplateColumn.HeaderTemplate>
+                                <DataTemplate>
+                                    <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
+                                        <CheckBox IsChecked="{Binding DataContext.IsAllSelected, RelativeSource={RelativeSource AncestorType=Window}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                  HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center"
+                                                  ToolTip="Chọn tất cả"/>
+                                    </Grid>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.HeaderTemplate>
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                                        <CheckBox IsChecked="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                  HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center"/>
+                                    </Grid>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+
                         <!-- Product Name with Image -->
-                        <DataGridTemplateColumn Header="SẢN PHẨM" Width="2*" MinWidth="160">
+                        <DataGridTemplateColumn Header="SẢN PHẨM" Width="1.3*" MinWidth="150" SortMemberPath="Product.ProductName">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <Grid>
@@ -355,14 +360,14 @@
 
                                         <!-- Product Info -->
                                         <StackPanel Grid.Column="1" VerticalAlignment="Center">
-                                            <TextBlock Text="{Binding ProductName}" 
+                                            <TextBlock Text="{Binding Product.ProductName}" 
                                                        FontSize="12" 
                                                        FontWeight="SemiBold"
                                                        Foreground="{DynamicResource PrimaryText}"
                                                        TextTrimming="CharacterEllipsis"
                                                        MaxWidth="150"
                                                        HorizontalAlignment="Left"/>
-                                            <TextBlock Text="{Binding ProductID}" 
+                                            <TextBlock Text="{Binding Product.ProductID}" 
                                                        FontSize="10" 
                                                        Foreground="{DynamicResource SecondaryText}"
                                                        Margin="0,2,0,0"/>
@@ -373,7 +378,7 @@
                         </DataGridTemplateColumn>
 
                         <!-- Category -->
-                        <DataGridTemplateColumn Header="DANH MỤC" Width="*" MinWidth="100">
+                        <DataGridTemplateColumn Header="DANH MỤC" Width="1.2*" MinWidth="110" SortMemberPath="Product.Category.CategoryName">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <Border Background="#F0F4FF"
@@ -383,7 +388,7 @@
                                             MinWidth="70"
                                             VerticalAlignment="Center"
                                             HorizontalAlignment="Left">
-                                        <TextBlock Text="{Binding Category.CategoryName}"
+                                        <TextBlock Text="{Binding Product.Category.CategoryName}"
                                                    MinWidth="60"
                                                    FontSize="11"
                                                    FontWeight="SemiBold"
@@ -398,8 +403,9 @@
 
                         <!-- Unit -->
                         <DataGridTextColumn Header="ĐVT" 
-                                            Binding="{Binding Unit}" 
-                                            Width="50">
+                                            Binding="{Binding Product.Unit}" 
+                                            Width="65"
+                                            SortMemberPath="Product.Unit">
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="FontSize" Value="11"/>
@@ -409,12 +415,12 @@
                         </DataGridTextColumn>
 
                         <!-- Price -->
-                        <DataGridTemplateColumn Header="GIÁ BÁN" Width="75">
+                        <DataGridTemplateColumn Header="GIÁ BÁN" Width="95" SortMemberPath="Product.Price">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <StackPanel VerticalAlignment="Center">
                                         <TextBlock FontSize="11" FontWeight="Bold" Foreground="#2196F3" VerticalAlignment="Center">
-                                            <Run Text="{Binding Price, StringFormat='N0'}"/>
+                                            <Run Text="{Binding Product.Price, StringFormat='N0'}"/>
                                             <Run Text="₫" FontSize="11"/>
                                         </TextBlock>
                                     </StackPanel>
@@ -423,7 +429,7 @@
                         </DataGridTemplateColumn>
 
                         <!-- Stock -->
-                        <DataGridTemplateColumn Header="TỒN KHO" Width="70">
+                        <DataGridTemplateColumn Header="TỒN KHO" Width="85" SortMemberPath="Product.StockQuantity">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <Border CornerRadius="4" 
@@ -434,7 +440,7 @@
                                             <Style TargetType="Border">
                                                 <Setter Property="Background" Value="#E8F5E9"/>
                                                 <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding StockQuantity}" Value="0">
+                                                    <DataTrigger Binding="{Binding Product.StockQuantity}" Value="0">
                                                         <Setter Property="Background" Value="#FFEBEE"/>
                                                     </DataTrigger>
                                                 </Style.Triggers>
@@ -444,9 +450,9 @@
                                             <TextBlock.Style>
                                                 <Style TargetType="TextBlock">
                                                     <Setter Property="Foreground" Value="#4CAF50"/>
-                                                    <Setter Property="Text" Value="{Binding StockQuantity}"/>
+                                                    <Setter Property="Text" Value="{Binding Product.StockQuantity}"/>
                                                     <Style.Triggers>
-                                                        <DataTrigger Binding="{Binding StockQuantity}" Value="0">
+                                                        <DataTrigger Binding="{Binding Product.StockQuantity}" Value="0">
                                                             <Setter Property="Foreground" Value="#F44336"/>
                                                             <Setter Property="Text" Value="Hết"/>
                                                         </DataTrigger>
@@ -460,7 +466,7 @@
                         </DataGridTemplateColumn>
 
                         <!-- Actions -->
-                        <DataGridTemplateColumn Header="THAO TÁC" Width="70">
+                        <DataGridTemplateColumn Header="THAO TÁC" Width="90" CanUserSort="False">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
